# aeris

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  SECURITY.md  mkdocs.yml
.docker-build-sim/: Dockerfile
.github/workflows/: ros-core-build.yml
docker/rosbridge/: Dockerfile  README.md  entrypoint.sh
docs/: index.md
docs/specs/: AER-SW-ARCH-001.md  bench_integration.md  cur_plan.md  disaster_scene.md  perception_mesh.md  sim_mapping.md  sim_setup.md  sw_architecture_001.md  transport_validation.md
docs/specs/stories/: cinematic_camera.md  multi_drone_sitl.md  rtabmap_vio_sim.md  sim_recording.md  vio_navigation.md
software/edge/: iaml_full.txt
software/edge/config/dds/: cyclonedds.xml  fastdds.xml  sysctl_overlay.conf
software/edge/config/ptp/: phc2sys.cfg  ptp4l_gm.cfg  ptp4l_slave.cfg
software/edge/config/srt/: abr_ladder.yaml
software/edge/launch/: perception_demo.launch.py
software/edge/src/aeris_camera_controller/: CMakeLists.txt  package.xml
software/edge/src/aeris_camera_controller/include/aeris/camera/: CameraControllerPlugin.hpp
software/edge/src/aeris_camera_controller/src/: CameraControllerPlugin.cpp
software/edge/src/aeris_evidence/: package.xml  setup.cfg  setup.py
software/edge/src/aeris_evidence/aeris_evidence/: __init__.py  evidence_bundle.py
software/edge/src/aeris_evidence/resource/: aeris_evidence
software/edge/src/aeris_map/: CMakeLists.txt  README.md  package.xml
software/edge/src/aeris_map/config/: map_tile_stream.yaml  openvins_sim.yaml  rtabmap_vio_sim.yaml
software/edge/src/aeris_map/include/aeris_map/: slam_backend.hpp  tile_contract.hpp
software/edge/src/aeris_map/launch/: rtabmap_vio_sim.launch.py
software/edge/src/aeris_map/src/: map_tile_publisher.cpp  slam_backend.cpp  tile_contract.cpp
software/edge/src/aeris_map/test/: test_map_tile_publisher.cpp  test_slam_backend.cpp  test_tile_contract.cpp
software/edge/src/aeris_mesh_agent/: package.xml  setup.cfg  setup.py
software/edge/src/aeris_mesh_agent/aeris_mesh_agent/: __init__.py  impairment_relay.py  message_envelope.py  relay_routing.py  store_forward_core.py  store_forward_store.py  store_forward_tiles.py
software/edge/src/aeris_msgs/: CMakeLists.txt  package.xml
software/edge/src/aeris_msgs/action/: AcousticBearing.action  GasIsopleth.action  MapTile.action  ThermalHotspot.action
software/edge/src/aeris_msgs/msg/: AcousticBearing.msg  CameraWaypoint.msg  FusedDetection.msg  GasIsopleth.msg  GeoPosition.msg  MapTile.msg  MissionProgress.msg  MissionState.msg  Telemetry.msg  ThermalHotspot.msg  VehicleOrientation.msg
software/edge/src/aeris_msgs/srv/: AcousticBearing.srv  GasIsopleth.srv  GetMapTileBytes.srv  MapTile.srv  MissionCommand.srv  SetCameraView.srv  ThermalHotspot.srv  VehicleCommand.srv
software/edge/src/aeris_orchestrator/: package.xml  setup.cfg  setup.py
software/edge/src/aeris_orchestrator/aeris_orchestrator/: __init__.py  heartbeat_node.py  mavlink_adapter.py  mission_node.py  search_patterns.py  vehicle_ids.py
software/edge/src/aeris_orchestrator/resource/: aeris_orchestrator
software/edge/src/aeris_orchestrator/test/: sitl_tracking_smoke.py  sitl_vio_return_smoke.py  test_mavlink_adapter.py  test_mission_node.py  test_search_patterns.py  test_vehicle_ids.py
software/edge/src/aeris_perception/: package.xml  setup.cfg  setup.py
software/edge/src/aeris_perception/aeris_perception/: __init__.py  acoustic_audio_sim_node.py  acoustic_bearing_node.py  acoustic_localization.py  fusion_engine.py  fusion_node.py  gas_input_sim_node.py  gas_isopleth_node.py  gas_plume_model.py  thermal_detection.py  thermal_hotspot_node.py
software/edge/src/aeris_perception/test/: test_acoustic_bearing_node.py  test_acoustic_localization.py  test_fusion_engine.py  test_fusion_node.py  test_gas_isopleth_node.py  test_gas_plume_model.py  test_thermal_detection_filters.py  test_thermal_hotspot_decode.py  test_thermal_hotspot_node.py  test_thermal_hotspot_node_ros.py
software/edge/tools/: README.md  bench_bootstrap.sh  dds_flood_tester.py  first_tile_timer.py  ptp_status.py  tile_latency_probe.py
software/sim/: README.md
software/sim/config/: camera_path_example.json  loop_closure_path.json  multi_drone.yaml  multi_drone_gps_denied.json  multi_drone_gps_denied.yaml  recording_profile.yaml  slam_parity.md  vio_navigation_profile.json  vio_navigation_profile.yaml
software/sim/launch/: disaster_scene.launch.py  multi_drone_sim.launch.py  replay_recording.launch.py  sim_block.launch.py  sim_world.launch.py
software/sim/models/cinematic_camera/: model.config  model.sdf
software/sim/models/test_box/: model.sdf
software/sim/tools/: camera_path_builder.py  record_sim_session.py  replay_mission.py  run_basic_sim.sh  run_multi_drone_sitl.py  send_camera_view.py  validate_loop_closure.sh  validate_multi_vehicle_dds.sh  validate_slam_topics.sh  validate_thermal_detection_rate.sh  validate_vio_navigation_drift.py  validation_utils.py
software/sim/worlds/: aeris_block.world  basic_world.sdf  disaster_scene.sdf
software/viewer/: README.md  next.config.ts  package-lock.json  package.json
software/viewer/src/: glsl.d.ts
software/viewer/src/app/: globals.css  layout.tsx  page.tsx
software/viewer/src/components/: ConnectionStatus.tsx  ErrorBoundary.tsx  Scene3D.tsx  TopicSubscriber.tsx
software/viewer/src/context/: CoordinateOriginContext.tsx  DetectionContext.tsx  FleetContext.tsx  LayerVisibilityContext.tsx  (+2 more)
software/viewer/tools/: next-build.mjs  smoke_fused_display.sh  suppress-baseline-warning.cjs  verify_vehicles.py
test/: test_camera_system.py  test_dds_multi_vehicle_comm.py  test_multi_drone_config.py  test_multi_drone_launcher.py  test_recording_system.py  test_rtabmap_vio_sim.py  test_sim_worlds.py  test_store_forward_buffer.py  test_viewer_abort_mission.py
tools/sim/: mock_rosbridge.py  publish_acoustic.py  publish_dummy_tiles.py  publish_gas.py  publish_perception.py  publish_telemetry.py  verify_map.py
verification/: verify_thermal_markers.py
(+126 files in other folders)
