<?xml version="1.0"?>
<package format="3">
  <name>aeris_map</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 map node that publishes fake MapTile messages for DDS bring-up.</description>
  <maintainer email="dev@aeris.local">Aeris Developers</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>aeris_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ov_msckf</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
