<?xml version="1.0"?>
<package format="3">
  <name>aeris_mesh_agent</name>
  <version>0.1.0</version>
  <description>Mesh impairment shims (drop/delay relay and store-and-forward tiles).</description>
  <maintainer email="dev@aeris.local">Aeris Developers</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aeris_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
