<?xml version="1.0"?>
<package format="3">
  <name>aeris_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for Aeris map, thermal, acoustic, and gas sensing data products.</description>
  <maintainer email="dev@aeris.local">Aeris Developers</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
