<?xml version="1.0"?>
<package format="3">
  <name>aeris_orchestrator</name>
  <version>0.1.0</version>
  <description>Multi-vehicle mission orchestration with MAVLink integration for autonomous search and tracking. Coordinates scout and ranger vehicle roles, sensor-triggered tracking behaviors, and GPS-denied navigation modes.</description>
  <maintainer email="dev@aeris.local">Aeris Developers</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>aeris_msgs</exec_depend>
  <exec_depend>python3-pymavlink</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
